--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^10.12.16",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
